2A/05_Projet_GL/src/test/deca/syntax/invalid/Objet/33_MalCast.deca
// Description:
//    Programme mal utilisation de casting, ona pas mis le duxième élement entre parenthèse
// Resultats:
//      Programme incorrecte syntaxiquement : 9:18: no viable alternative at input 'x'
// Historique:
//    cree le 18/01/2023
{
    float y = 0.5;
    int x = (int) x;

}